--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    /* font-family: 'Poppins', sans-serif; */
 }
 
 /* body {
@@ -19,12 +18,12 @@ nav.navbar {
     letter-spacing: 2px;
 }
 
-.navbar-collapse ul li a {
+.offcanvas-body ul li a {
     color: #646464;
     margin: 0 10px;
 }
 
-.navbar-collapse ul li a:hover:not(.btn) {
+.offcanvas-body ul li a:hover:not(.btn) {
     color: black;
     border-bottom: 2px solid black;
 }
@@ -34,16 +33,18 @@ nav.navbar {
 .main-section {
     height: 100vh;
     background-color: #F1F3FF;
+    position: relative;
 }
 
-.main-section span {
-    background-color: #0D28A6;
+.bg-car::before {
+    content: "";
     position: absolute;
-    bottom: 1.4%;
+    background-color: #0D28A6;
+    bottom: 0;
     right: 0;
-    height: 40%;
-    width: 629px;
-    border-radius: 60px 0 0 0;
+    height: 50%;
+    width: 50%;
+    border-radius: 100px 0 0 0;
 }
 
 .tagline h2,
@@ -330,3 +331,28 @@ nav.navbar {
 }
 
 /* end of faq section */
+
+@media (max-width: 990px) {
+    .main-section {
+        height: auto;
+    }
+
+    .navbar-nav a:hover:not(.btn)::before {
+        content: "> ";
+    }
+
+    .navbar-nav a:hover:not(.btn)::after {
+        content: " <";
+    }
+
+    .navbar-nav a:hover {
+        border-bottom: none !important;
+    }
+}
+
+@media (max-width:767px) {
+    .bg-car::before {
+        height: 30%;
+        width: 90%;
+    }
+}
